# Lista-de-Tarefas

./: main.py  pyproject.toml  tarefas.db
